infrastructure/headscale/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale
  namespace: server
  labels:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`headscale.d-f.dev`)"
      kind: Rule
      services:
        - name: headscale
          port: 8080
      middlewares:
        - name: crowdsec
          namespace: server
  tls:
    certResolver: letsencrypt
